<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.guest.cm0104.android104.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/title_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTotalPay"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtTotalpay"
            android:layout_width="wrap_content"
            android:onClick="onClickAction"
            android:layout_height="wrap_content"
            android:layout_weight="0.52"
            android:ems="10"
            android:hint="@string/edtTotalpay"
            android:inputType="textPersonName"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="人数　："
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/humen_str" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickAction"
            android:text="@string/btnCalc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtView4"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtCollectMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:background="#afafaf"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtView6"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtMyPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#afffaf"
            android:layout_weight="0.07"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="支払い端数"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbt100"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt100Str" />

        <RadioButton
            android:id="@+id/rbt500"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt500Str" />

        <RadioButton
            android:id="@+id/rbt1000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbt1000Str" />

    </RadioGroup>

    <ToggleButton
        android:id="@+id/tbtnToku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="@string/modoOff"
        android:textOn="@string/modoOn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbx2Jikai"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/cbx2JikaiStr"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtZankin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtZankinStr"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:background="#fff00f"/>
    </LinearLayout>

</LinearLayout>
